# document_digitizer

./: .flake8  .gitignore  LICENSE  README.md  config.sample.toml  config.toml  pyproject.toml
docs/: configuration.md  example.md  installation.md
docs/claude/: claude_roadmap.md
src/document_digitizer/: __init__.py  __main__.py  cli.py  deskew.py  logging_utils.py  stitch.py
